src/objects/TMTicketSystem__c.object
<CustomObject>
    <description>Object to track TM ticket system</description>
    <fields>
        <fullName>LastRunDate__c</fullName>
        <label>Last Run Date</label>
        <summarizedField>TMSystemDetail__c.RunDate__c</summarizedField>
        <summaryForeignKey>TMSystemDetail__c.System__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesDate__c</fullName>
        <label>Sales Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AGF</fullName>
                </value>
                <value>
                    <fullName>ARZ</fullName>
                </value>
                <value>
                    <fullName>ATL</fullName>
                </value>
                <value>
                    <fullName>CH1</fullName>
                </value>
                <value>
                    <fullName>CH2</fullName>
                </value>
                <value>
                    <fullName>CH3</fullName>
                </value>
                <value>
                    <fullName>CH5</fullName>
                </value>
                <value>
                    <fullName>CH6</fullName>
                </value>
                <value>
                    <fullName>CH7</fullName>
                </value>
                <value>
                    <fullName>DAL</fullName>
                </value>
                <value>
                    <fullName>DET</fullName>
                </value>
                <value>
                    <fullName>DL2</fullName>
                </value>
                <value>
                    <fullName>FL2</fullName>
                </value>
                <value>
                    <fullName>FLO</fullName>
                </value>
                <value>
                    <fullName>LA1</fullName>
                </value>
                <value>
                    <fullName>LA2</fullName>
                </value>
                <value>
                    <fullName>MTN</fullName>
                </value>
                <value>
                    <fullName>NCA</fullName>
                </value>
                <value>
                    <fullName>NEV</fullName>
                </value>
                <value>
                    <fullName>NTL</fullName>
                </value>
                <value>
                    <fullName>NV2</fullName>
                </value>
                <value>
                    <fullName>NV3</fullName>
                </value>
                <value>
                    <fullName>NY1</fullName>
                </value>
                <value>
                    <fullName>NY2</fullName>
                </value>
                <value>
                    <fullName>NY4</fullName>
                </value>
                <value>
                    <fullName>NY5</fullName>
                </value>
                <value>
                    <fullName>NY6</fullName>
                </value>
                <value>
                    <fullName>NY7</fullName>
                </value>
                <value>
                    <fullName>PHI</fullName>
                </value>
                <value>
                    <fullName>SCS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TM Ticket System</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>System__c</columns>
        <columns>LastRunDate__c</columns>
        <columns>Priority__c</columns>
        <columns>SalesDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TMTS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TM Ticket Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>